Fixed main element to no longer be hidden by the header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,7 @@ main {
     background-color: beige;
     /* Make Main Element take up any surplus space to push the footer down */
     flex: 1 0 auto;
+    margin-top: 90px;
 }
 
 /* Footer */
